# gibss

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: additive.md  logistic_susie.md
gibss/: additive.py  cox.py  gibss.py  logistic.py  logistic1d.py  logistic2d.py  logistic_ser.py  logistic_ser_mle.py  logistic_sparse.py  logisticprofile.py  newton.py  ser.py  susie.py  twogroup.py  utils.py
notebooks/: logistic_gibss.py
tests/: test_lr.py  test_lr_ser.py
