[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gibss"
version = "0.0.2"
dependencies = [
  "jax>=0.4.29",
  "jaxlib>=0.4.29",
  "numpy"
]
requires-python = ">=3.10"
authors = [
  {name = "Karl Tayeb", email = "karl.tayeb7@gmail.com"}
]
maintainers = [
  {name = "Karl Tayeb", email = "karl.tayeb7@gmail.com"}
]
description = "Bayesian variable selection for (almost) any regresion model"
readme = "README.md"
license = {file = "LICENSE.txt"}
